# KernelOverloards_Public

./: CMakeLists.txt  MachineLearning.txt  README.md  REMAKE.c  TipsForReadability.txt  ai_route.txt  besteffortMagyarazat.txt  cross_launcher.c  functions.c  gui.cpp  imgui.ini  launcher.c  main.c  mars_map_50x50.csv  tester.c  tester.txt
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
output/: rover_log.csv
src/: gui.cpp  launcher.c  rover_sim.c
testingAI/: main.py  tartomany.txt
